add testRAP to execute generated RAP unit tests